--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
-- consider packing the desktop app with drivers 
+- consider packing the desktop app with drivers
   to install to avoid having the user to use virtual cables
   and maybe also a vst/au version along with standalone
 - bass and presence eq curves should emulate pultec technique
 - add insert for external vsts at start and end of the chain
+
+-le features spaziali swag
+-modificare i present accordingly
